<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/filter"
        android:layout_gravity="center"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group_entertainment"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_film_filter"
                android:text="Film"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tvshow_filter"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tv_show" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_book_filter"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_book" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/release_year_entertainment"/>
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/discrete_rangeslider_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:stepSize="1.0"
        android:valueFrom="1932.0"
        android:valueTo="2021.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:values="@array/slider_values" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:layout_gravity="center"
        android:columnCount="2">
        <ToggleButton
            android:id="@+id/btn_filter_category_fantasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Fantasy"
            android:textOn="Fantasy"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/filter_category_action"
            android:textOn="@string/filter_category_action"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_adventure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/filter_category_adventure"
            android:textOn="@string/filter_category_adventure"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/filter_category_family"
            android:textOn="@string/filter_category_family"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_comedy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/filter_category_comedy"
            android:textOn="@string/filter_category_comedy"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_drama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Drama"
            android:textOn="Drama"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Sports"
            android:textOn="Sports"/>
        <ToggleButton
            android:id="@+id/btn_filter_category_documentaries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/filter_category_documentaries"
            android:textOn="@string/filter_category_documentaries"/>

    </GridLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_filter_done"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="10dp"
        android:text="@string/done" />

</LinearLayout>