<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.ExploreFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/my_profile"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_view_my_profile"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:text="@string/view_my_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/edit_username_my_profile"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="14dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/edit_bio_my_profile"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_edit_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="22dp" />
            </LinearLayout>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/edit_platform_my_profile"
                android:textStyle="bold" />
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_group_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_netflix"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Netflix"
                    app:iconGravity="textStart" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_disney_plus"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Disney Plus"
                    app:iconGravity="textStart"
                    app:iconTint="@color/light_blue" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_amazon_prime"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Amazon Prime"
                    app:iconGravity="textStart" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Button
                android:id="@+id/btn_edit_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/done"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/blue"
                android:padding="10dp"
                android:text="Log Out"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress_bar_profile_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>